--- a/src/test/resources/com/CRM_Tedi/properties/Config.properties
+++ b/src/test/resources/com/CRM_Tedi/properties/Config.properties
@@ -7,7 +7,7 @@ implicit.wait=50
 emailId=va_sagrawal@australiancricket.onmicrosoft.com
 password=$ulPre4321
 
-Loginfrm=call1
+Loginfrm=call
 
 #Event Attendance
 EA_MatchId_Rec=Automate Match New 31
